# geospatial-ds-cholera-lab

./: .env-example  .envrc  .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  environment.yml  explore_ceda.ipynb  explore_ceda_zonalstats.ipynb  explore_cholera_data.ipynb  explore_cholera_data_adm2.ipynb  explore_cholera_data_shp.ipynb  explore_data.ipynb  find_names.ipynb  geoboundaries.ipynb  manually_updated_admin_names.csv  matched_admin2_names.csv  pyproject.toml
data/: zonal-means-lst-200910-201912.csv  zonal-means-precip-200910-201912.csv  zonal-means-sm-200910-201912.csv
data/AfricaShapefiles/: total_shp_0427.dbf  total_shp_0427.shp
exploration/: aggregate-zonal-means.ipynb  check-latlon-overlap.ipynb  check_latlon_overlap.ipynb  geolocate.ipynb  imbalanced-sampling.ipynb  imbalanced_sampling.ipynb  model-exploration.ipynb  outbreak-eda.ipynb  outbreak_eda.ipynb  zonal-means-eda.ipynb  zonal-means.ipynb  zonalstats.ipynb
src/cholera/: __init__.py  builtins.py  ceda.py  lst.py  outbreaks.py  precip.py  sm.py  xarray_.py
src/cholera/resources/: outbreaks.csv
src/cholera/resources/AfricaShapefiles/: total_shp_0427.shx
